# baler-music-chatbot

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  clean_data.py  docker-compose.yml  embed_reviews.py  export_local_db.py  load_to_db.py  main.py  pyproject.toml
.github/workflows/: deploy.yml  nightly_build.yml  nightly_data_pipeline.yml  scrape_reviews.yml
chroma_db/: chroma.sqlite3
src/: scrapy.cfg
src/baler/: auth_util.py  build_scrape_list.py  check_db.py  config.py  create_knowledge_base.py  database.py  enrich_metadata.py  inspect_db.py  items.py  llm.py  main.py  middlewares.py  music_services.py  pipelines.py  settings.py  update_raw_data.py  utils.py
src/baler/spiders/: scraper.py
static/: index.html
