[tool.poetry]
name = "baler"
version = "0.1.0"
description = "A music recommendation chatbot powered by Pitchfork reviews"
authors = ["Sam Taylor <sam.bernick.taylor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
scrapy = ">=2.11.0,<3.0.0"
pandas = ">=2.2.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
scrapy-impersonate = ">=1.6.1,<2.0.0"
scrapy-playwright = ">=0.0.44,<0.1.0"
pyarrow = ">=16.0.0,<17.0.0"
sentence-transformers = ">=2.7.0,<3.0.0"
tqdm = ">=4.66.0,<5.0.0"
chromadb = ">=0.5.0"
numpy = "<2.0.0"
boto3 = ">=1.34.0,<2.0.0"
fastapi = ">=0.111.0,<0.112.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0,<0.30.0"}
openai = ">=1.23.0,<2.0.0"
google-generativeai = ">=0.5.0,<0.6.0"
torch = ">=2.3.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.0.0"
ruff = ">=0.1.0"
jupyterlab = ">=4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
