[tool.poetry]
name = "baler-music-chatbot"
version = "0.1.0"
description = "A music recommendation chatbot using Pitchfork reviews"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.1"
chromadb = ">=0.5.0"
sentence-transformers = "^3.0.1"
pandas = "^2.2.2"
torch = "^2.3.1"
pydantic = "^2.7.4"
httpx = "^0.27.0"
scrapy = "^2.11.2"
boto3 = "^1.34.125"
google-auth = "^2.30.0"
playwright = "^1.44.0" # --- NEW: Add Playwright for scraping ---
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.0"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["baler"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
